Quorum/Library/Tests/TypeChecker/Pass/CastParamObjInt.quorum
class Main
    action Main
        Integer i
        i:SetValue(5)
        integer t = pass(i)
        output t
    end

    action pass(Object o) returns integer
        Integer i = cast(Integer, o)
        return i:GetValue()
    end
end