Quorum/Library/Tests/TypeChecker/Fail/ExpAssignNumberIntObj.quorum
class Main
    action Main
        Integer i
        number num = 0.0
        i:SetValue(5)
        num = cast(number, i)
    end
end